# cancerdetect

./: .gitignore  .gitignore~  CMakeLists.txt~  ReadMe.txt
src/: CMakeLists.txt  Canny.h  GLCM.cpp  GLCM.h  LBP.cpp  LBP.h  breastcancer_predict.cpp  breastcancer_predict.h  main.cpp  mainwindow.cpp  mainwindow.h  my_scale.h  mysvmtrain.cpp  mysvmtrain.h  normData.cpp  normData.h  predict_glcm.cpp  predict_glcm.h  svm.cpp
